--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,7 @@
   <nav>
     <div class="logo"><img src="/national images/nj.jpeg" height="60" width="100"></div>
     <ul>
-      <li><a href="/wildlife.html">Home</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="/about.html">About</a></li>
       <li><a href="/animal.html">Animals</a></li>
       <li><a href="/gallery.html">Gallery</a></li>
